Bug 129288 - Changing font size from XUL prefs dialog crashes PPEmbed. It's because the XUL pref window's docshell is typeContent, not typeChrome. r=adamlock/sr=alecf/a=asa